# osm-processor

./: .env  .gitignore  CMakeLists.txt  LICENSE  README.md  Untitled-1  commands  config-example.json  data.txt  example.json  projections.py  request.json  zeugs
cmake/: FindArrow.cmake  FindOsmium.cmake  FindParquet.cmake  FindProtozero.cmake
data/: isle-of-man.osm.pbf
src/main/: checkout.hpp  create.hpp  exporter.hpp  extractor.cpp  extractor.hpp  functions.hpp  generator.hpp  main.cpp  model.hpp  prepare.hpp  routine.hpp  serializer.cpp  serializer.hpp  setup.hpp  upload.hpp
src/main/functions/: area.hpp  center.hpp  convex_hull.hpp  distance.hpp  envelope.hpp  intersect.hpp  project.hpp  transform.hpp  util.hpp
src/main/functions/detail/: compare.hpp  polylabel.hpp  shamos_hoey.hpp
src/main/geometry/: algorithm.hpp  model.hpp  projection.hpp  transform.hpp  util.hpp
src/main/handler/: area_handler.hpp  boundary_manager.hpp  bounds_handler.hpp  calculation_handler.hpp  compression_handler.hpp  compressor.hpp  convert_handler.hpp  count_handler.hpp  filter_handler.hpp  tag_value_count_handler.hpp
src/main/http/: mapdata_request.hpp  mapdata_uploader.hpp  request.hpp  response.hpp
src/main/io/: reader.hpp  writer.hpp
src/main/io/handler/: bounds_handler.hpp  convert_handler.hpp  count_handler.hpp
src/main/io/reader/: config_reader.hpp  header_reader.hpp  mapdata_reader.hpp  osm_reader.hpp  reader.hpp
src/main/io/writer/: config_writer.hpp  map_writer.hpp  mapdata_writer.hpp  osm_writer.hpp  writer.hpp
src/main/mapmaker/: algorithm.hpp  assembler.hpp  builder.hpp  calculator.hpp  compressor.hpp  connector.hpp  converter.hpp  counter.hpp  filter.hpp  inspector.hpp  model.hpp  projector.hpp  transformer.hpp
src/main/model/: area.hpp  boundary.hpp  box.hpp  config.hpp  container.hpp  entity.hpp  header.hpp  line.hpp  map.hpp  multipolygon.hpp  point.hpp  polygon.hpp  ring.hpp  type.hpp  types.hpp
src/main/model/geometry/: circle.hpp  line.hpp  multipolygon.hpp  point.hpp  polygon.hpp  rectangle.hpp  ring.hpp  segment.hpp
src/main/model/graph/: edge.hpp  graph.hpp  undirected_graph.hpp  vertex.hpp
src/main/model/map/: bonus.hpp  boundary.hpp  entity.hpp  map.hpp  territory.hpp  type.hpp
src/main/model/memory/: area.hpp  buffer.hpp  entity.hpp  entity_ref_list.hpp  member.hpp  node.hpp  relation.hpp  ring.hpp  type.hpp  types.hpp  way.hpp
src/main/model/warzone/: bonus.hpp  map.hpp  territory.hpp
src/main/routine/: checkout.hpp  create.hpp  interactive.hpp  setup.hpp  upload.hpp
src/main/util/: color.hpp  functions.hpp  insert.hpp  join.hpp  log.hpp  misc.hpp  precision.hpp  print.hpp  rand.hpp  request.hpp  table.hpp  time.hpp  title.hpp  validate.hpp
